[package]
name = "rustynode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"

[dependencies]
byteorder = "1.4.3"
bytes = "1.2.1"
hex = "0.4.3"
postgres = "0.19.4"
postgres-derive = "0.4.3"
postgres-types = { version = "0.2.4", features = ["array-impls"] }
protobuf = "3.2.0"
refinery = { version = "0.8.6", features = ["postgres"] }
rust_decimal = { version = "1.26.1", features = ["db-postgres"] }
sha2 = "0.10.6"
streaming-iterator = "0.1.8"
time = "0.3.15"


